# mcp-schema-lint

./: .gitignore  PRD.md  README.md  parking_lot.md  pyproject.toml
examples/: bad-report.html  bad-report.md
fixtures/: bad_server.json  good_server.json
mcpschemalint/: __init__.py  cli.py  linter.py  loader.py  report.py  rules.py
tests/: test_lint.py
